--- a/test/spiders/carrier_ymlu/main_info/03_no_release/sample.html
+++ b/test/spiders/carrier_ymlu/main_info/03_no_release/sample.html
@@ -1144,7 +1144,7 @@ Sys.WebForms.PageRequestManager._initialize('ctl00$DefaultMasterScriptManager', 
         <img alt="" src="../../Content/img/banner_05.jpg" class="banner_img" />
     </div>
     <div id="ContentPlaceHolder1_article_rwd">
-        <div class="eser_ttwrap_topset_rwd col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div id="ContentPlaceHolder1_divResult" class="eser_ttwrap_topset_rwd col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <h2 class="greent_rwd">
                 Result of Tracking by B/L No.
 				
